<resources>
    <string name="app_name">Words</string>

    <string name="a_main_search_term">Search a Term&#8230;</string>
    <string name="a_web_default_website_title">Android Developers</string>


    <string name="mic_icon_description">Microphone icon</string>
    <string name="url_icon_description">Link icon</string>
    <string name="google_icon_description">Google icon</string>

    <string name="nav_change_technology">Change technology</string>
    <string name="nav_history">My history</string>
    <string name="nav_toggle_images_hide">Hide images</string>
    <string name="nav_toggle_images_show">Show Images</string>
    <string name="nav_connect_facebook">Connect with Facebook</string>
    <string name="nav_connect_twitter">Connect with Twitter</string>
    <string name="nav_rate">Rate app</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Log out</string>
    <string name="drawer_open">Opening</string>
    <string name="drawer_close">Closing</string>
    <string name="nav_cool">Cool stuff</string>
    <string name="nav_home">Home</string>

    <string name="f_starting_welcome">Welcome to Words!</string>
    <string name="f_starting_get_started">Get started&#8230;</string>

    <string name="f_placeholder">Loading&#8230;</string>
    <string name="f_placeholder_big">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap</string>

    <string name="f_main_package_placeholder">Android Package</string>
    <string name="f_main_more">More</string>


    <string name="f_search_term_speak_now">Speak now&#8230;</string>
    <string name="f_search_term_speak_press">Press the button&#8230;</string>

    <string name="f_search_term_google_btn">Search</string>
    <string name="f_search_term_google_hint">Search a term with Google&#8230;</string>

    <string name="recycler_item_add_btn">View</string>
    <string name="recycler_item_go_btn">Go</string>
    <string name="f_about_author">Project created by Edwin Hernandez</string>
    <string name="f_about_company">Mobile Apps Company</string>
    <string name="f_about_date">January 2016</string>
    <string name="a_main_dialog_confirm_exit">Are you sure you want to exit the application?</string>
    <string name="a_main_dialog_thanks">Thank you for not leaving us. We love you!</string>

    <string name="f_search_recycler_space_decoration">5</string>
    <string name="f_history_recycler_space_decoration">10</string>

</resources>
