<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/f_about_padding"
    tools:context="com.mobileappscompany.training.words.view.AboutFragment">

    <TextView
        android:textSize="@dimen/f_about_title_font_size"
        android:textStyle="bold"
        android:textColor="@color/color_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_about_author" />

    <TextView
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_about_company" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_about_date" />

</LinearLayout>
