<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:fitsSystemWindows="true"
    tools:context="mx.evin.apps.words.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/a_main_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/a_main_recyclerview_margin_bottom">
        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            card_view:cardElevation="@dimen/a_main_cardview_elevation">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addTyped"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="55"
                    android:background="@android:color/transparent"
                    android:onClick="add_term"
                    android:text="@string/a_main_search_term"
                    android:textAllCaps="false"
                    android:textColor="@color/black_overlay" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/a_main_icon_size"
                    android:layout_height="@dimen/a_main_icon_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/url_icon_description"
                    android:padding="@dimen/a_main_icon_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_edit" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="@dimen/a_main_icon_size"
                    android:layout_height="@dimen/a_main_icon_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/document_icon_description"
                    android:padding="@dimen/a_main_icon_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_camera" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/addMic"
                    android:layout_width="@dimen/a_main_icon_size"
                    android:layout_height="@dimen/a_main_icon_size"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/mic_icon_description"
                    android:onClick="add_term_voice"
                    android:padding="@dimen/a_main_icon_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_mic" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />
</android.support.v4.widget.DrawerLayout>